# shorturl-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2c530effde2e_initial.py
src/: main.py
src/app/: routers.py
src/app/shortener/: endpoints.py  models.py  schemas.py  service.py
src/config/: settings.py
src/misc/: database.py  dependencies.py
tests/: conftest.py  test_shortener.py
